SONAR-25477 Fix EmbeddedTomcatTest on Windows environment